--- a/pruebas/drop.html
+++ b/pruebas/drop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet"  href="https://ghcdn.rawgit.org/FedericoManzano/bodystyle-v3.0.0-fuente/master/dist/css/bodystyle.min.css">
+    <link  rel="stylesheet"  href="https://ghcdn.rawgit.org/FedericoManzano/bodystyle-v3.1.0-fuente/master/dist/css/bodystyle.min.css">
     <link rel="stylesheet" href="../dist/css/estilos-dynamics.css">
   
     <title>Document</title>
@@ -43,12 +43,12 @@
     <!-- LISTA -->
     <div  id="drop2"  class="dropdown">
 
-        <a>Trabajo</a>
-        <a>Amigos</a>
-        <a>Parque</a>
-        <a>Trabajo</a>
-        <a>Amigos</a>
-        <a>Parque</a>
+        <a href="#">Trabajo</a>
+        <a href="#">Amigos</a>
+        <a href="#">Parque</a>
+        <a href="#">Trabajo</a>
+        <a href="#">Amigos</a>
+        <a href="#">Parque</a>
     </div>
     
     <script src="../dist/js/dynamics.js"></script>
