--- a/pruebas/com.html
+++ b/pruebas/com.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <link rel="stylesheet" href="https://ghcdn.rawgit.org/FedericoManzano/bodystyle-v3.0.0-fuente/master/dist/css/bodystyle.min.css">
-   <link rel="stylesheet" href="../dist/css/estilos-dynamics.css">
+   
+<link rel="stylesheet" href="../dist/css/estilos-dynamics.css">
   
     <title>Document</title>
 </head>
@@ -17,7 +17,7 @@
         <div  class="nav-body">
             <a  class="nav-logo">Logo</a>
             <ul  class="lista">
-                <li><a>Inicio</a></li>
+                <li><a class="com-trigger" data-pos="derecha" data-info="esto es un enlace del nav">Inicio</a></li>
                 <li><a>Servicios</a></li>
                 <li><a  class="dropdown-toggle"  data-target="#drop2">Porfolio</a></li>
             </ul>
@@ -26,11 +26,12 @@
 
     <!-- LISTA -->
     <div  id="drop2"  class="dropdown">
-    
-            <a>Trabajo</a>
-            <a>Amigos</a>
-            <a>Parque</a>
+            <a href="#" >Items</a>
+            <a href="#">Items</a>
+            <a href="#">Items</a>
+            
     </div>
-    <script src="../dist/js/dynamics.js"></script>
+
+    <script src="../dist/js/dynamics.bundle.js"></script>
 </body>
 </html>
