--- a/pruebas/toast.html
+++ b/pruebas/toast.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    
     <link rel="stylesheet" href="../dist/css/estilos-dynamics.css">
+
+    <style>
+        .rojo {
+            background-color: red;
+            border-radius: 20px;
+        }
+    </style>
 </head>
 <body>
     
 
-    <button onclick="saludar()"></button>
+    <button onclick="saludar()">Boton</button>
 
     <script src="../dist/js/dynamics.js"></script>
 
@@ -18,7 +26,7 @@
         function saludar () {
             let  conf = {
                 html: 'Este es un Toast de Dynamics-tips V1.5.0 gfh dhfhghf fhf ghfhfhf',
-                clases: ["rojo", "borde"],
+                clases: ["rojo"],
                 tiempo: 10000,
                 cerrar: true
             }
